[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "cc-tmux"
version = "0.1.0"
description = "Run and orchestrate Claude Code safely inside tmux sessions."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "cc-tmux contributors" }]
keywords = ["claude", "tmux", "cli", "agent", "automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/cycorld/cc-tmux"
Issues = "https://github.com/cycorld/cc-tmux/issues"

[project.scripts]
cc-tmux = "cc_tmux.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cc_tmux"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
